fix(gap): fixed the gaps in the login form to make the title of the form not overlap the logo

--- a/pages/login/assets/css/style.css
+++ b/pages/login/assets/css/style.css
@@ -93,7 +93,7 @@ a {
 .form-container {
   width: 100%;
   max-width: 420px;
-  margin: 60px auto 0;
+  margin: 100px auto 0;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -119,7 +119,6 @@ a {
 .login-form {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
 }
 
 .input-group {
